exports.id = 836;
exports.ids = [836];
exports.modules = {

/***/ 8571:
/***/ ((module) => {

// Exports
module.exports = {
	"image_left": "LandingPage_image_left__plCYO",
	"div": "LandingPage_div__ePDuz",
	"content": "LandingPage_content__YekF3",
	"loginbox": "LandingPage_loginbox__Ysk2K",
	"all_landing": "LandingPage_all_landing__J_K9c"
};


/***/ }),

/***/ 2669:
/***/ ((module) => {

// Exports
module.exports = {
	"login_box": "LoginForm_login_box__3uX9Z",
	"small_logo_log": "LoginForm_small_logo_log__ZiTsf",
	"small_logo_reg": "LoginForm_small_logo_reg__SLm_H",
	"spacingbtn": "LoginForm_spacingbtn___VumU",
	"error": "LoginForm_error__ieVhA",
	"center": "LoginForm_center__JlFad",
	"firstandlast": "LoginForm_firstandlast__iV2g_"
};


/***/ }),

/***/ 1748:
/***/ ((module) => {

// Exports
module.exports = {
	"bodah": "WaitPage_bodah__VjDy3",
	"loading": "WaitPage_loading__fpUZ5",
	"dot": "WaitPage_dot__F4Qiq",
	"wave": "WaitPage_wave__3gVbQ",
	"relu_btn": "WaitPage_relu_btn__GHTeB",
	"inputstyle": "WaitPage_inputstyle__VJEbE",
	"code": "WaitPage_code__C5Ejt",
	"container": "WaitPage_container__AeKuW"
};


/***/ }),

/***/ 2612:
/***/ ((module, __webpack_exports__, __webpack_require__) => {

"use strict";
__webpack_require__.a(module, async (__webpack_handle_async_dependencies__, __webpack_async_result__) => { try {
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   "I": () => (/* binding */ ScanService)
/* harmony export */ });
/* harmony import */ var _service_pb_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(6379);
/* harmony import */ var _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__(5860);
var __webpack_async_dependencies__ = __webpack_handle_async_dependencies__([_service_pb_js__WEBPACK_IMPORTED_MODULE_0__, _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__]);
([_service_pb_js__WEBPACK_IMPORTED_MODULE_0__, _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__] = __webpack_async_dependencies__.then ? (await __webpack_async_dependencies__)() : __webpack_async_dependencies__);
// @generated by protoc-gen-connect-es v0.8.6 with parameter "target=ts"
// @generated from file threedoclusion/v1/service.proto (package threedoclusion.v1, syntax proto3)
/* eslint-disable */ // @ts-nocheck


/**
 * @generated from service threedoclusion.v1.ScanService
 */ const ScanService = {
    typeName: "threedoclusion.v1.ScanService",
    methods: {
        /**
     * @generated from rpc threedoclusion.v1.ScanService.SendVR
     */ sendVR: {
            name: "SendVR",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .SendVRRequest */ .vT,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .SendVRResponse */ .I_,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.Waiting
     */ waiting: {
            name: "Waiting",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .WaitingRequest */ .BR,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .WaitingResponse */ .sb,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.ServerStreaming
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.AddScan
     */ addScan: {
            name: "AddScan",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddScanRequest */ .L7,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddScanResponse */ .nq,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.DeleteScan
     */ deleteScan: {
            name: "DeleteScan",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeleteScanRequest */ .lK,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeleteScanResponse */ .eG,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetAllScans
     */ getAllScans: {
            name: "GetAllScans",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllScansRequest */ .v5,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllScansResponse */ .mX,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetScanByID
     */ getScanByID: {
            name: "GetScanByID",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetScanByIDRequest */ .cx,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetScanByIDResponse */ .h2,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetScanByDate
     */ getScanByDate: {
            name: "GetScanByDate",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetScanByDateRequest */ .yE,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetScanByDateResponse */ .cT,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.AddTag
     */ addTag: {
            name: "AddTag",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddTagRequest */ .N7,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddTagResponse */ .dt,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.DeleteTag
     */ deleteTag: {
            name: "DeleteTag",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeleteTagRequest */ .sF,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeleteTagResponse */ .XH,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetAllTags
     */ getAllTags: {
            name: "GetAllTags",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllTagsRequest */ .he,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllTagsResponse */ .cV,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetTagByID
     */ getTagByID: {
            name: "GetTagByID",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetTagByIDRequest */ .oZ,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetTagByIDResponse */ .TQ,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetAllTagsByType
     */ getAllTagsByType: {
            name: "GetAllTagsByType",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllTagsByTypeRequest */ .L,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllTagsByTypeResponse */ .Bf,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.SendPositionScan
     */ sendPositionScan: {
            name: "SendPositionScan",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .SendPositionScanRequest */ .U0,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .SendPositionScanResponse */ .Wd,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetPositionScan
     */ getPositionScan: {
            name: "GetPositionScan",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetPositionScanRequest */ .IX,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetPositionScanResponse */ .fO,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.AddPatient
     */ addPatient: {
            name: "AddPatient",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddPatientRequest */ .eb,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddPatientResponse */ .dI,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.DeletePatient
     */ deletePatient: {
            name: "DeletePatient",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeletePatientRequest */ .h_,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeletePatientResponse */ .CJ,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetAllPatients
     */ getAllPatients: {
            name: "GetAllPatients",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllPatientsRequest */ .MP,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllPatientsResponse */ .XZ,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetPatientByID
     */ getPatientByID: {
            name: "GetPatientByID",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetPatientByIDRequest */ .bP,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetPatientByIDResponse */ .No,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetPatientByName
     */ getPatientByName: {
            name: "GetPatientByName",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetPatientByNameRequest */ .bn,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetPatientByNameResponse */ .bc,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.AddDentist
     */ addDentist: {
            name: "AddDentist",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddDentistRequest */ .gw,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .AddDentistResponse */ .qo,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.DeleteDentistById
     */ deleteDentistById: {
            name: "DeleteDentistById",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeleteDentistByIdRequest */ .wY,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .DeleteDentistByIdResponse */ .rZ,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetAllDentists
     */ getAllDentists: {
            name: "GetAllDentists",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllDentistsRequest */ .Cm,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetAllDentistsResponse */ .bO,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.GetDentistById
     */ getDentistById: {
            name: "GetDentistById",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetDentistByIdRequest */ .PN,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .GetDentistByIdResponse */ .jS,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.UpdateDentistById
     */ updateDentistById: {
            name: "UpdateDentistById",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .UpdateDentistByIdRequest */ .hW,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .UpdateDentistByIdResponse */ .Gr,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.Login
     */ login: {
            name: "Login",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .LoginRequest */ .xJ,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .LoginResponse */ .IJ,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        },
        /**
     * @generated from rpc threedoclusion.v1.ScanService.Register
     */ register: {
            name: "Register",
            I: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .RegisterRequest */ .Z5,
            O: _service_pb_js__WEBPACK_IMPORTED_MODULE_0__/* .RegisterResponse */ .Oz,
            kind: _bufbuild_protobuf__WEBPACK_IMPORTED_MODULE_1__.MethodKind.Unary
        }
    }
};

__webpack_async_result__();
} catch(e) { __webpack_async_result__(e); } });

/***/ })

};
;